--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -194,8 +194,10 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\x64\*.dll" "$(OutputPath)" /R /Y</Com
     <ClInclude Include="BaseComponent.h" />
     <ClInclude Include="BaseMap.h" />
     <ClInclude Include="BaseRenderComponent.h" />
+    <ClInclude Include="BoundingBox.h" />
     <ClInclude Include="CollisionComponent.h" />
     <ClInclude Include="CollisionHandler.h" />
+    <ClInclude Include="DemoScene.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="FPSComponent.h" />
     <ClInclude Include="GameObject.h" />
@@ -223,8 +225,10 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\x64\*.dll" "$(OutputPath)" /R /Y</Com
     <ClCompile Include="BaseComponent.cpp" />
     <ClCompile Include="BaseMap.cpp" />
     <ClCompile Include="BaseRenderComponent.cpp" />
+    <ClCompile Include="BoundingBox.cpp" />
     <ClCompile Include="CollisionComponent.cpp" />
     <ClCompile Include="CollisionHandler.cpp" />
+    <ClCompile Include="DemoScene.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="FPSComponent.cpp" />
     <ClCompile Include="GameObject.cpp" />
