--- a/Minigin/Minigin.vcxproj.filters
+++ b/Minigin/Minigin.vcxproj.filters
@@ -5,10 +5,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Game Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="Framework Files">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
@@ -18,9 +14,6 @@
     </Filter>
     <Filter Include="Framework Files\Managers">
       <UniqueIdentifier>{a829d91e-bc2f-4f26-8667-cbd2a2c2a425}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Framework Files\Scene">
-      <UniqueIdentifier>{d6dc9b50-1aa9-45d5-b40e-2e0047b7a379}</UniqueIdentifier>
     </Filter>
     <Filter Include="Framework Files\GameLoop">
       <UniqueIdentifier>{1805653e-1859-4d31-b007-0691f3d1d23e}</UniqueIdentifier>
@@ -46,6 +39,9 @@
     <Filter Include="Framework Files\Prefabs">
       <UniqueIdentifier>{a395f745-00f7-457c-b540-03afd64cc655}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Framework Files\Demo">
+      <UniqueIdentifier>{6f1feca8-bb2b-403f-b785-8abb84792561}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Font.h">
@@ -65,15 +61,6 @@
     </ClInclude>
     <ClInclude Include="InputManager.h">
       <Filter>Framework Files\Managers</Filter>
-    </ClInclude>
-    <ClInclude Include="Scene.h">
-      <Filter>Framework Files\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneObject.h">
-      <Filter>Framework Files\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="Minigin.h">
-      <Filter>Framework Files\GameLoop</Filter>
     </ClInclude>
     <ClInclude Include="Log.h">
       <Filter>Framework Files\Log</Filter>
@@ -132,8 +119,20 @@
     <ClInclude Include="BoundingBox.h">
       <Filter>Framework Files\Collision</Filter>
     </ClInclude>
+    <ClInclude Include="CharacterControllerComponent.h">
+      <Filter>Framework Files\GameObject\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Minigin.h">
+      <Filter>Framework Files\GameLoop</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>Framework Files\GameLoop</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneObject.h">
+      <Filter>Framework Files\GameLoop</Filter>
+    </ClInclude>
     <ClInclude Include="DemoScene.h">
-      <Filter>Game Files</Filter>
+      <Filter>Framework Files\Demo</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -158,15 +157,6 @@
     <ClCompile Include="InputManager.cpp">
       <Filter>Framework Files\Managers</Filter>
     </ClCompile>
-    <ClCompile Include="Scene.cpp">
-      <Filter>Framework Files\Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="Main.cpp">
-      <Filter>Framework Files\GameLoop</Filter>
-    </ClCompile>
-    <ClCompile Include="Minigin.cpp">
-      <Filter>Framework Files\GameLoop</Filter>
-    </ClCompile>
     <ClCompile Include="Log.cpp">
       <Filter>Framework Files\Log</Filter>
     </ClCompile>
@@ -178,9 +168,6 @@
     </ClCompile>
     <ClCompile Include="RenderComponent.cpp">
       <Filter>Framework Files\GameObject\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="Time.cpp">
-      <Filter>Framework Files\Managers</Filter>
     </ClCompile>
     <ClCompile Include="FPSComponent.cpp">
       <Filter>Framework Files\GameObject\Components</Filter>
@@ -209,14 +196,20 @@
     <ClCompile Include="SpriteRenderer.cpp">
       <Filter>Framework Files\GameObject\Components</Filter>
     </ClCompile>
-    <ClCompile Include="BaseMap.cpp">
-      <Filter>Framework Files\BaseClasses</Filter>
-    </ClCompile>
     <ClCompile Include="BoundingBox.cpp">
       <Filter>Framework Files\Collision</Filter>
     </ClCompile>
+    <ClCompile Include="CharacterControllerComponent.cpp">
+      <Filter>Framework Files\GameObject\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene.cpp">
+      <Filter>Framework Files\GameLoop</Filter>
+    </ClCompile>
     <ClCompile Include="DemoScene.cpp">
-      <Filter>Game Files</Filter>
+      <Filter>Framework Files\Demo</Filter>
+    </ClCompile>
+    <ClCompile Include="Minigin.cpp">
+      <Filter>Framework Files\GameLoop</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
