--- a/DigDugGame/DigDugGame.vcxproj.filters
+++ b/DigDugGame/DigDugGame.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="DigDug.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
