--- a/DigDugGame/DigDugGame.vcxproj
+++ b/DigDugGame/DigDugGame.vcxproj
@@ -173,16 +173,16 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\x64\*.dll" "$(OutputPath)" /R /Y</Com
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="ChangeSceneCommand.h" />
     <ClInclude Include="DigDug.h" />
+    <ClInclude Include="DigDugAnimationHandler.h" />
     <ClInclude Include="DigDugLevel.h" />
     <ClInclude Include="MenuInputHandler.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="StartScreen.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ChangeSceneCommand.cpp" />
     <ClCompile Include="DigDug.cpp" />
+    <ClCompile Include="DigDugAnimationHandler.cpp" />
     <ClCompile Include="DigDugLevel.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MenuInputHandler.cpp" />
