--- a/Minigin/Minigin.vcxproj.filters
+++ b/Minigin/Minigin.vcxproj.filters
@@ -59,9 +59,6 @@
     <ClInclude Include="Renderer.h">
       <Filter>Framework Files\Graphics</Filter>
     </ClInclude>
-    <ClInclude Include="ResourceManager.h">
-      <Filter>Framework Files\Managers</Filter>
-    </ClInclude>
     <ClInclude Include="SceneManager.h">
       <Filter>Framework Files\Managers</Filter>
     </ClInclude>
@@ -158,6 +155,15 @@
     <ClInclude Include="RenderCompObserver.h">
       <Filter>Framework Files\Observer</Filter>
     </ClInclude>
+    <ClInclude Include="BaseLoader.h">
+      <Filter>Framework Files\BaseClasses</Filter>
+    </ClInclude>
+    <ClInclude Include="ContentManager.h">
+      <Filter>Framework Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureLoader.h">
+      <Filter>Framework Files\Graphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MiniginPCH.cpp">
@@ -171,9 +177,6 @@
     </ClCompile>
     <ClCompile Include="Renderer.cpp">
       <Filter>Framework Files\Graphics</Filter>
-    </ClCompile>
-    <ClCompile Include="ResourceManager.cpp">
-      <Filter>Framework Files\Managers</Filter>
     </ClCompile>
     <ClCompile Include="SceneManager.cpp">
       <Filter>Framework Files\Managers</Filter>
@@ -249,6 +252,12 @@
     </ClCompile>
     <ClCompile Include="RenderCompObserver.cpp">
       <Filter>Framework Files\Observer</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureLoader.cpp">
+      <Filter>Framework Files\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="ContentManager.cpp">
+      <Filter>Framework Files\Managers</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
